--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 
     <%= f.text_field :first_name, autofocus: true, class: "form-control", placeholder: "First name" %>
     <%= f.text_field :last_name, autofocus: true, class: "form-control", placeholder: "Last name" %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Email address", autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "Email address", autocomplete: "email" %>
 
     <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', placeholder: 'password' %>
 
