--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,12 +20,18 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+      <% if account_signed_in? %>
+      <li class="nav-item">
+        <%= link_to "se déconnecter", destroy_account_session_path, method: :delete, class: "nav-link" %>
+      </li>
+        <% else %>
       <li class="nav-item">
         <%= link_to "Log in", new_account_session_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "Sign_up", new_account_registration_path, class: "nav-link" %>
       </li>
+        <% end %>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
