--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', placeholder: 'password confirmation' %>
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-
+    <p class="mt-5 mb-3 text-muted"></p>
   <% end %>
 
   <%= render "devise/shared/links" %>
