--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <%= render 'layouts/navbar' %>
+      <%= render 'layouts/nav/navbar' %>
     </header>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
@@ -28,3 +28,7 @@
 
   </body>
 </html>
+
+
+<!--lien Yt formation : https://www.youtube.com/watch?v=qvGGz-2WHpU&list=PLtZ8UuFjvnDcQDXbIZ-JG2MXM0_03gVY3&index=2&t=168s-->
+<!--à suivre à partir de 33.53 minutes-->
