--- a/app/views/layouts/nav/_navbar.html.erb
+++ b/app/views/layouts/nav/_navbar.html.erb
@@ -7,7 +7,11 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
+        <% if account_signed_in? %>
+          <%= link_to 'Dashboard', dashboard_index_path, class: 'nav-link' %>
+        <% else %>
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <% end %>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
@@ -20,22 +24,21 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      <% if account_signed_in? %>
-      <li class="nav-item">
-        <%= link_to "se déconnecter", destroy_account_session_path, method: :delete, class: "nav-link" %>
-      </li>
-        <% else %>
-      <li class="nav-item">
-        <%= link_to "Log in", new_account_session_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Sign_up", new_account_registration_path, class: "nav-link" %>
-      </li>
-        <% end %>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <ul class="navbar-nav">
+      <% if account_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "se déconnecter", destroy_account_session_path, method: :delete, class: "nav-link" %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Log in", new_account_session_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Sign_up", new_account_registration_path, class: "nav-link" %>
+        </li>
+      <% end %>
+    </ul>
+
   </div>
 </nav>
